<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/backgroundPrimary"
    tools:context="com.example.android.musicalstructureapplication.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/backgroundPrimary">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="72dp"
            android:layout_marginTop="72dp"
            android:src="@drawable/logo2" />

        <RelativeLayout
            android:id="@+id/textFields"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAlbumName"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@id/username"
                android:background="@color/colorAlbumName"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

        </RelativeLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/logo"
            android:layout_alignStart="@+id/logo"
            android:layout_below="@+id/textFields"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/button_to_next_screen" />
    </RelativeLayout>
</ScrollView>